# Mikant_sim

./: README.md
mikant_description/: CMakeLists.txt  model.config  package.xml
mikant_description/meshes/: Rudder_1.stl  Wingsail_1.stl
mikant_description/urdf/: Catamaran_Sailboat.gazebo  Catamaran_Sailboat.trans  Catamaran_Sailboat.xacro  materials.xacro
mikant_gazebo_plugins/: CMakeLists.txt  package.xml
mikant_gazebo_plugins/include/mikant_gazebo_plugins/: buoyancy_force_plugin.hh
mikant_gazebo_plugins/src/: buoyancy_force_plugin.cc  polyhedron_volume.cc
mikant_sim/: CMakeLists.txt  package.xml
mikant_sim/launch/: Test_laun.launch.py
mikant_sim/worlds/: test.world
