<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mikant_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thurn6101@gmail.com">thirawat</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}" />
  </export>
</package>
